--- a/style.css
+++ b/style.css
@@ -4,10 +4,14 @@
     background: url('images/perceptual-standard.jpg');
     background-size:cover;
     position:relative;
+
 }
+
+
 /* text css above hero image*/
 .hero_title {
     font-size: 4.5rem;
+    color: white;
 }
 .hero_desc {
     font-size: 2rem;
@@ -41,6 +45,7 @@
     text-align: center;
     width: 100%;
 }
+
 .card-title {
     text-align: center;
 }
