--- a/style.css
+++ b/style.css
@@ -176,7 +176,7 @@ body.dark-mode {
 	content: "";
 	position: absolute;
 	top: 50%;
-	left: 10px; /* modification ici */
+	left: 10px; 
 	transform: translateY(-50%);
 	font-size: 14px;
 	color: #fff;
@@ -189,48 +189,55 @@ body.dark-mode {
 }
 
 
-
-
-
 /* Barre de recherche */
-.search-container {
+
+.search-box {
     display: flex;
     align-items: center;
-    margin-left: auto;
-  }
-  
-  .search-container form {
-    position: relative;
-  }
-  
-  .search-container input[type="text"] {
-    border: none;
-    background-color: #f2f2f2;
-    padding: 12px 20px;
-    border-radius: 25px;
-    transition: background-color 0.3s;
-    font-size: 16px;
-    width: 0px;
-    height: 0px;
-    margin-right: 20px;
-  }
-  
-  .search-container input[type="text"]:focus {
-    background-color: #fff;
-    outline: none;
+    margin-right: auto;
+    margin-left: 70px;
+}
+
+.search-box input {
+    height: 40px;
     width: 200px;
-    height: 50px;
-  }
-  
-  .search-container button[type="submit"] {
+    border-radius: 20px;
+    padding: 5px 20px;
     border: none;
+    outline: none;
+    font-size: 16px;
     background-color: #f2f2f2;
+}
+
+.search-box button {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    margin-left: 10px;
+    border: none;
+    outline: none;
+    background-color: #f2f2f2;
+}
+
+.search-button i {
+    font-size: 20px;
     color: #333;
-    padding: 12px 20px;
-    border-radius: 25px;
-    transition: background-color 0.3s;
-  }
-  
-  .search-container button[type="submit"]:hover {
-    background-color: #ccc;
-  }
+}
+
+/* Heure et Date */
+
+  .date-time {
+    position: absolute;
+    top: 5px;
+    right: 20px;
+    color: #c0a347;
+    font-size: 16px;
+}
+
+#date {
+    margin: 0;
+}
+
+#time {
+    margin: 0;
+}
