--- a/style.css
+++ b/style.css
@@ -48,7 +48,7 @@ font-family: 'Varela Round', sans-serif;
 
 /* services section css */
 .servicesText.card {
-    height: 280px;
+    height: 280px;  
     cursor: pointer;
   }
 .servicesIcon {
@@ -237,4 +237,44 @@ body.dark-mode {
     margin: 0;
 }
 
+
+/* button */ 
+
+.button {
+    border: none;
+    display: block;
+    text-align: center;
+    cursor: pointer;
+    text-transform: uppercase;
+    outline: none;
+    overflow: hidden;
+    position: relative;
+    color: #eeeeee;
+    font-weight: 600;
+    font-size: 15px;
+    background-color: #05172d94;
+    padding: 10px 10px;
+    margin: 0 auto;
+  }
+  .button span {
+    position: relative;
+    z-index: 1;
+  }
+  .button:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 470%;
+    width: 140%;
+    background: #0c3a56;
+    -webkit-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+    -webkit-transform: translateX(-100%) translateY(-25%) rotate(45deg);
+    transform: translateX(-100%) translateY(-25%) rotate(45deg);
+  }
+  .button:hover:after {
+    -webkit-transform: translateX(-9%) translateY(-25%) rotate(45deg);
+    transform: translateX(-9%) translateY(-25%) rotate(45deg);
+  }
 
